crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__import_sorting.snap
---
source: crates/ruff_linter/src/linter.rs
---
isort.ipynb:cell 1:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from pathlib import Path
2 | | import random
3 | | import math
  | |___________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+import math
  2 |+import random
1 3 | from pathlib import Path
2   |-import random
3   |-import math
4 4 | from typing import Any
5 5 | import collections
6 6 | # Newline should be added here

isort.ipynb:cell 2:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from typing import Any
2 | | import collections
  | |__________________^ I001 (unsorted-imports)
3 |   # Newline should be added here
4 |   def foo():
  |
  = help: Organize imports

ℹ Safe fix
1 1 | from pathlib import Path
2 2 | import random
3 3 | import math
  4 |+import collections
4 5 | from typing import Any
5   |-import collections
  6 |+
  7 |+
6 8 | # Newline should be added here
7 9 | def foo():
8 10 |     pass

isort.ipynb:cell 3:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from pathlib import Path
2 | | import sys
  | |__________^ I001 (unsorted-imports)
3 |
4 |   %matplotlib \
  |
  = help: Organize imports

ℹ Safe fix
6  6  | # Newline should be added here
7  7  | def foo():
8  8  |     pass
   9  |+import sys
9  10 | from pathlib import Path
10    |-import sys
11 11 | 
12 12 | %matplotlib \
13 13 |     --inline

isort.ipynb:cell 3:7:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
5 |       --inline
6 |
7 | / import math
8 | | import abc
  | |__________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
12 12 | %matplotlib \
13 13 |     --inline
14 14 | 
   15 |+import abc
15 16 | import math
16    |-import abc
