crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__load_before_global_declaration.py.snap
---
source: crates/ruff_linter/src/linter.rs
---
resources/test/fixtures/syntax_errors/load_before_global_declaration.py:9:5: PLE0118 (load-before-global-declaration) Name `x` is used prior to global declaration on line 10
   |
 7 | x = 10
 8 | def test_2():
 9 |     x += 1      # error
   |     ^ PLE0118 (load-before-global-declaration)
10 |     global x
   |

resources/test/fixtures/syntax_errors/load_before_global_declaration.py:13:11: PLE0118 (load-before-global-declaration) Name `x` is used prior to global declaration on line 14
   |
12 | def test_3():
13 |     print(x)  # error
   |           ^ PLE0118 (load-before-global-declaration)
14 |     global x
15 |     x = 5
   |
