crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__vscode_language_id.snap
---
source: crates/ruff_linter/src/linter.rs
---
vscode_language_id.ipynb:cell 3:1:8: F401 (unused-import) [*] `os` imported but unused
  |
1 | import os
  |        ^^ F401 (unused-import)
2 |
3 | print("hello world")
  |
  = help: Remove unused import: `os`

ℹ Safe fix
1   |-import os
2 1 | 
3 2 | print("hello world")
